and design regime.
The net result is a much better, more accurate and feature complete release.

The short term damage, however, is that 0.98 is not backwards compatible with 0.95.
We sincerely apologise for this, and hope that now our tests are in place we should
not face similar issues again.
Once we declare a 1.0 final release, we will support backwards compatability as fully as possible.

Key changes
-----------

Instants that did not fully represent a point in time and had to be resolved have been deleted.
In their place is the new ReadablePartial interface, thus:
  DateOnly - deleted - use DateMidnight (an instant) or YearMonthDay (a partial)
  TimeOnly - deleted - use TimeOfDay (a partial)
Partials represent a set of fields in local time (no time zone).
A partial can be converted to a full instant by specifying the missing fields and a zone.

Durations previously held details of both millisecond only and field based durations.
These have been split into two classes.
  ReadableDuration/Duration - holds a millisecond length of time
  ReadablePeriod/Period/MutablePeriod - holds a duration as a number of years, months,
      weeks, days, hours, minutes, seconds and milliseconds
These two representations can have very different effects when adding larger periods of time.
Specific cases include adding over daylight savings boundaries, and adding months.

Chronology implementations were previously obtained directly.
Now you should use the factory methods on Chronology:
  CopticChronology.getInstance(DateTimeZone.UTC) --> Chronology.getCoptic(DateTimeZone.UTC))

DateTimeFieldType and DurationFieldType concepts added.
Certain method signatures on instants changed as a result.
This was done to clarify by API design what can and can't be done,
  DateTime.get(SomeChronology.secondOfMinute()) --> DateTime.get(DateTimeFieldType.secondOfMinute())

All methods referring to DateTimeZone have been renamed to refer to Zone:
  DateTime.getDateTimeZone() --> DateTime.getZone()
